# MGRrmsnorm

./: LICENSE  MANIFEST.in  Makefile  README.md  SwigluTriton.PY  benchmark_swiglu.py  colab_test.py  pyproject.toml  rmsnorm_standalone.cu  setup.py  test_rmsnorm.py
megagemm/: __init__.py  rmsnorm.py  swiglu.py
pytorch_binding/: binding.cpp
src/: rmsnorm_kernel.cu  rmsnorm_kernel.h
