[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "megagemm"
version = "0.1.0"
description = "High-performance CUDA kernels for RMSNorm and SwiGLU - faster than PyTorch native"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Yogi", email = "gabriel@example.com"}
]
keywords = ["cuda", "pytorch", "rmsnorm", "swiglu", "llm", "transformers", "triton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "triton>=2.0",
]

[project.urls]
Homepage = "https://github.com/MadrasLe/MGRrmsnorm"
Repository = "https://github.com/MadrasLe/MGRrmsnorm"
Issues = "https://github.com/MadrasLe/MGRrmsnorm/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
]

[tool.setuptools]
packages = ["megagemm"]
